update project with font awesome && add new partials files

--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -12,4 +12,6 @@
 // 4. Partials and Layout
 @import './partials/views',
 './partials/about.partials',
+'./partials/experiences.partials',
+'./partials/skills.partials',
 './layout/layout';
