--- a/src/assets/scss/partials/_about.partials.scss
+++ b/src/assets/scss/partials/_about.partials.scss
@@ -5,6 +5,14 @@
     }
 
     &__list {
+        display: block;
+        column-count: 2;
         padding: 0;
+        font-size: 2rem;
+
+        &__item {
+            margin: 0 3rem;
+            padding: 0.5rem;
+        }
     }
 }
